# traceback-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
examples/: advanced_usage.py  basic_usage.py
src/: __init__.py  analyzer.py  cli.py  config.py  context.py  formatter.py  handler.py
src/providers/: __init__.py  anthropic.py  base.py  cerebras.py  groq.py  ollama.py  openai.py
tests/: conftest.py  test_analyzer.py  test_config.py  test_context.py  test_providers.py
